# scan_matching

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: ICP_config.yaml  my_init.yaml  rviz_cfg.rviz  testConfig.yaml
csv_output/: KalmanFilterState.csv
map/: kreuzung.csv  kreuzung_ll.csv  kreuzung_utm.csv  map1_R0_E1.tif  map2_E1_E0.tif  map3_R12.tif  map4_E2.tif  map5_R21.tif  map_Elphi_E1_E0.csv  map_Elphi_E1_E0_Bauplan.csv  map_Elphi_E1_E0_Bauplan_reduced.csv  map_Elphi_E2.csv  map_Elphi_E2_Bauplan.csv  map_Elphi_E2_Bauplan_reduced.csv  map_Elphi_R0_E1.csv  map_Elphi_R0_E1_Bauplan.csv  map_Elphi_R0_E1_Bauplan_reduced.csv  map_Elphi_R12.csv  map_Elphi_R12_Bauplan.csv  map_Elphi_R12_Bauplan_reduced.csv  map_Elphi_R21.csv  map_Elphi_R21_Bauplan.csv  map_Elphi_R21_Bauplan_reduced.csv  map_Elphi_ueberlagert.csv  maps_ueberlagert.tif  parkhaus.csv
src/: CMakeLists.txt  Floor.h  hb.cpp  hb2.cpp  hb2_connect_simulink.cpp  hb2_libpointmatcher.cpp  hb2_thread.cpp  listener.cpp  localizer.cpp  myInit.h  testLib.cpp  testLibpm.cpp
tools/: CMakeLists.txt
tools/src/csv/: csv_main.h  csvfile.h  output_csv.h
tools/src/debugging/: matplotlibcpp.h  plausability.h  plotter.h
tools/src/gps_transforms/: transform.hpp
tools/src/kdtree/: KDTreeVectorOfVectorsAdaptor.h
tools/src/map/: map.hpp
tools/src/scan_match/: debugging.cpp  debugging.hpp  filter.cpp  filter.hpp  icp.cpp  icp.hpp  icp_methods.cpp  icp_methods.hpp  particle_filter.cpp  particle_filter.hpp  transform.cpp  transform.hpp  utils.cpp  utils.hpp  var_defs.hpp
tools/src/ukf/: ukf.cpp  ukf.h
tools/src/ukf2/: ukf.cpp  ukf.h
