<?xml version="1.0"?>
<package format="2">
  <name>scan_matching</name>
  <version>0.0.0</version>
  <description>The scan_matching package</description>


  <maintainer email="umut91c@gmail.com">Umut</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>ukf_state_msg</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>ukf</build_depend>
  <build_depend>map</build_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ukf_state_msg</build_export_depend>
  <build_export_depend>geodesy</build_export_depend>
  <build_export_depend>ukf</build_export_depend>
  <build_export_depend>map</build_export_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>ukf_state_msg</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>ukf</exec_depend>
  <exec_depend>map</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
